Changelog
=========

1.3 (xx.xx.xxxx)
~~~~~~~~~~~~~~~~

 * Django 1.9 support
 * Support for indexing fields across relations in Elasticsearch
 * Added toolbar to cross-link between different search areas, and `register_admin_search_area` hook to register new areas (Ben Kerle)
 * Added `WAGTAIL_PASSWORD_RESET_ENABLED` setting to allow password resets to be disabled independently of the password management interface (John Draper)
 * Updated fonts for more comprehensive Unicode support
 * Added `.alt` attribute to image renditions
 * The default `src`, `width`, `height` and `alt` attributes can now be overridden by attributes passed to the `{% image %}` tag
 * Added keyboard shortcuts for preview and save in the page editor
 * Added `Page` methods `can_exist_under`, `can_create_at`, `can_move_to` for customising page type business rules
 * `wagtailadmin.utils.send_mail` now passes extra keyword arguments to Django's `send_mail` function (Matthew Downey)
 * `page_unpublish` signal is now fired for each page that was unpublished by a call to `PageQuerySet.unpublish()`
 * Add `get_upload_to` method to `AbstractImage`, to allow overriding the default image upload path (Ben Emery)
 * Notification emails are now sent per user (Matthew Downey)
 * Added the ability to override the default manager on Page models
 * Added an optional human-friendly `site_name` field to sites (Timo Rieber)
 * Added success message after updating image from the image upload view (Christian Peters)
 * New translations for Arabic and Latvian
 * Fix: HTTP cache purge now works again on Python 2 (Mitchel Cabuloy)
 * Fix: Locked pages can no longer be unpublished (Alex Bridge)
 * Fix: Site records now implement `get_by_natural_key`
 * Fix: Creating pages at the root level (and any other instances of the base `Page` model) now properly respects the `parent_page_types` setting
 * Fix: Settings menu now opens correctly from the page editor and styleguide views