@@ -52,6 +52,7 @@ The search interface in the Wagtail admin now includes a toolbar to quickly swit
 Minor features
 ~~~~~~~~~~~~~~
 
+ * Added system checks to check the `subpage_types` and `parent_page_types` attriutes of page models
  * Added ``WAGTAIL_PASSWORD_RESET_ENABLED`` setting to allow password resets to be disabled independently of the password management interface (John Draper)
  * Updated fonts for more comprehensive Unicode support
  * Added ``.alt`` attribute to image renditions
